--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
@@ -30,7 +30,7 @@
         <mat-icon>delete</mat-icon>
       </button>
     </div>
-    <div class="body-large">Reconsideration Request #{{ reconsiderations.length - i }}</div>
+    <div class="subheading1">Reconsideration Request #{{ reconsiderations.length - i }}</div>
     <div class="decision-content">
       <div>
         <div class="subheading2">Request Submission Date</div>
@@ -109,7 +109,7 @@
         <mat-icon>delete</mat-icon>
       </button>
     </div>
-    <div class="body-large">Modification Request #{{ modifications.length - i }}</div>
+    <div class="subheading1">Modification Request #{{ modifications.length - i }}</div>
     <div class="decision-content">
       <div>
         <div class="subheading2">Request Submission Date</div>
