--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -13,7 +13,7 @@
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: route.path === '' }"
-            class="nav-item"
+            class="nav-item nav-text"
           >
             <mat-icon>{{ route.icon }}</mat-icon>
             {{ route.menuTitle }}
