--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.html
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.html
@@ -6,5 +6,5 @@
     large: large
   }"
 >
-  <span class="center">{{ initials }}</span>
+  <span class="center subheading1">{{ initials }}</span>
 </div>
