--- a/alcs-frontend/src/app/shared/staff-journal/staff-journal-note/staff-journal-note.component.html
+++ b/alcs-frontend/src/app/shared/staff-journal/staff-journal-note/staff-journal-note.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="note" class="note">
   <div class="body">
-    <div class="made-by label-text">{{ note.author }}</div>
+    <div class="made-by button-text">{{ note.author }}</div>
     <div *ngIf="isEditing">
       <app-staff-journal-note-input [note]="note" (cancel)="onCancel()" (save)="onSave($event)" labelText="Edit note" />
     </div>
 
-    <div *ngIf="!isEditing" class="content body2-text">{{ note.body }}</div>
+    <div *ngIf="!isEditing" class="content body-text">{{ note.body }}</div>
 
     <div class="footer" *ngIf="!isEditing">
       <div class="edited">
