--- a/alcs-frontend/src/app/shared/time-tracker/time-tracker.component.html
+++ b/alcs-frontend/src/app/shared/time-tracker/time-tracker.component.html
@@ -1,4 +1,4 @@
-<div class="body1-text left time-tracking">
+<div class="body-text left time-tracking">
   <div *ngIf="!paused"><span class="dot"></span>Active</div>
   <div *ngIf="paused"><span class="dot paused"></span>Paused</div>
   <div
