--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -14,14 +14,14 @@
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: route.path === '' }"
-            class="nav-item"
+            class="nav-item nav-text"
           >
             <mat-icon>{{ route.icon }}</mat-icon>
             {{ route.menuTitle }}
           </div>
           <div
             *ngIf="route.requiresAuthorization ? !isAuthorized : false"
-            class="nav-item disabled"
+            class="nav-item nav-text disabled"
             matTooltip="Application not subject to ALC Review"
           >
             <mat-icon>{{ route.icon }}</mat-icon>
