--- a/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.html
@@ -1,5 +1,6 @@
 <div mat-dialog-title>
   <div class="close">
+    <h6 class="card-type-label">Application</h6>
     <button mat-icon-button [mat-dialog-close]="isDirty">
       <mat-icon>close</mat-icon>
     </button>
