--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-conditions.component.html
@@ -1,9 +1,9 @@
 <section>
-  <h5>Decision Condition(s)</h5>
+  <h5>Decision Conditions</h5>
   <div class="condition" *ngFor="let condition of mappedConditions; let index = index; trackBy: trackByFn">
     <app-decision-condition
       [(data)]="mappedConditions[index]"
-      (dataChange)='onChanges()'
+      (dataChange)="onChanges()"
       [codes]="codes.decisionConditionTypes"
       [selectableComponents]="selectableComponents"
     ></app-decision-condition>
