--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-owners/parcel-owners.component.html
@@ -16,7 +16,13 @@
     </ng-container>
 
     <ng-container *ngIf="!isCrown" matColumnDef="organizationName">
-      <th mat-header-cell *matHeaderCellDef>Organization Name</th>
+      <ng-container *ngIf="!isShowAllOwners">
+        <th mat-header-cell *matHeaderCellDef>Organization Name</th>
+      </ng-container>
+      <ng-container *ngIf="isShowAllOwners">
+        <th mat-header-cell *matHeaderCellDef>Organization Name / Ministry / Department</th>
+      </ng-container>
+
       <td mat-cell *matCellDef="let element">
         <app-no-data [showRequired]="false" *ngIf="!element.organizationName"></app-no-data>
         <span>{{ element.organizationName }}</span>
