--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-owners/parcel-owners.component.html
@@ -1,13 +1,37 @@
 <div class="owner-table-wrapper">
   <table class="owner-table" mat-table [dataSource]="_owners">
+    <ng-container matColumnDef="type">
+      <th mat-header-cell [hidden]="isCrown" *matHeaderCellDef>Type</th>
+      <td mat-cell [hidden]="isCrown" *matCellDef="let element">{{ element.type.label }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">{{ element.position }}</td>
     </ng-container>
 
     <ng-container matColumnDef="displayName">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <th mat-header-cell *matHeaderCellDef>Full Name</th>
       <td mat-cell *matCellDef="let element">{{ element.displayName }}</td>
+    </ng-container>
+
+    <ng-container *ngIf="!isCrown" matColumnDef="organizationName">
+      <ng-container *ngIf="!isShowAllOwners">
+        <th mat-header-cell *matHeaderCellDef>Organization Name</th>
+      </ng-container>
+      <ng-container *ngIf="isShowAllOwners">
+        <th mat-header-cell *matHeaderCellDef>Organization Name / Ministry / Department</th>
+      </ng-container>
+
+      <td mat-cell *matCellDef="let element">
+        <app-no-data [showRequired]="false" *ngIf="!element.organizationName"></app-no-data>
+        <span>{{ element.organizationName }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container *ngIf="isCrown" matColumnDef="organizationName">
+      <th mat-header-cell *matHeaderCellDef>Ministry/ Department</th>
+      <td mat-cell *matCellDef="let element">{{ element.organizationName }}</td>
     </ng-container>
 
     <ng-container matColumnDef="phone">
@@ -18,11 +42,6 @@
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef>Email</th>
       <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-      <th mat-header-cell [hidden]='isCrown' *matHeaderCellDef>Type</th>
-      <td mat-cell [hidden]='isCrown' *matCellDef="let element">{{ element.type.label }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
