--- a/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
+++ b/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
@@ -1,25 +1,27 @@
 <div *ngIf="application">
   <div class="header">
     <h3>Local/First Nation Gov Review</h3>
-    <button
-      [routerLink]="'/application/' + application.fileNumber + '/edit'"
-      *ngIf="application.canEdit"
-      mat-flat-button
-      color="primary"
-    >
-      Edit Application
-    </button>
-    <button
-      *ngIf="applicationReview"
-      (click)="onDownloadReviewPdf(application.fileNumber)"
-      mat-flat-button
-      color="accent"
-    >
-      Download PDF
-    </button>
-    <button *ngIf="application.canReview" (click)="onReview(application.fileNumber)" mat-flat-button color="primary">
-      Review Application
-    </button>
+    <div class="btns-wrapper">
+      <button
+        [routerLink]="'/application/' + application.fileNumber + '/edit'"
+        *ngIf="application.canEdit"
+        mat-flat-button
+        color="primary"
+      >
+        Edit Application
+      </button>
+      <button *ngIf="application.canReview" (click)="onReview(application.fileNumber)" mat-flat-button color="primary">
+        Review Application
+      </button>
+      <button
+        [disabled]="!applicationReview"
+        (click)="onDownloadReviewPdf(application.fileNumber)"
+        mat-flat-button
+        color="accent"
+      >
+        Download PDF
+      </button>
+    </div>
   </div>
   <div *ngIf="application.status.code === APPLICATION_STATUS.IN_PROGRESS" class="warning">
     This section will update after the application is submitted.
