Enable download button if logged in as lfng to review

--- a/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
+++ b/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
@@ -14,7 +14,7 @@
         Review Application
       </button>
       <button
-        [disabled]="!applicationReview"
+        [disabled]="!application.canReview && !applicationReview"
         (click)="onDownloadReviewPdf(application.fileNumber)"
         mat-flat-button
         color="accent"
