Add Allowed Card Types to Boards
* Link Boards to Card Type, filter the move board dropdown by the allowed types
* Add Move Board for Modifications and Planning Reviews

--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -47,7 +47,7 @@
         <mat-icon>move_down</mat-icon>
       </button>
       <mat-menu class="move-board-menu" xPosition="before" #moveMenu="matMenu">
-        <button (click)="onBoardSelected(board)" *ngFor="let board of boards" mat-menu-item>
+        <button (click)="onBoardSelected(board)" *ngFor="let board of allowedBoards" mat-menu-item>
           <div class="board-menu-item">
             <span class="favourite-board-icon-container"
               ><mat-icon *ngIf="board.isFavourite" class="favourite-board-icon">star</mat-icon>
