Add NOI Prep Page
* With two fields, retroactive and subtype
* Add new pill for subtype

--- a/alcs-frontend/src/app/shared/details-header/details-header.component.html
+++ b/alcs-frontend/src/app/shared/details-header/details-header.component.html
@@ -9,6 +9,7 @@
         <app-application-type-pill *ngFor="let type of types" [type]="type"></app-application-type-pill>
         <app-application-type-pill *ngIf="showReconLabel" [type]="reconLabel"></app-application-type-pill>
         <app-application-type-pill *ngIf="showModificationLabel" [type]="modificationLabel"></app-application-type-pill>
+        <app-application-type-pill *ngIf="showRetroLabel" [type]="retroactiveLabel"></app-application-type-pill>
       </div>
     </div>
     <div class="center">
