--- a/alcs-frontend/src/app/features/home/home.component.html
+++ b/alcs-frontend/src/app/features/home/home.component.html
@@ -6,15 +6,31 @@
     <app-assigned></app-assigned>
   </div>
   <div *ngIf="hasGIS">
-    <app-gis-subtasks></app-gis-subtasks>
+    <app-subtask-table
+      subtaskLabel="GIS"
+      [assignableRoles]="[ROLES.GIS]"
+      [subtaskType]="SUBTASK_TYPE.GIS"
+    ></app-subtask-table>
+    <iframe [src]="GIS_DASHBOARD_URL | safe" frameborder="0" width="350" height="400" allowtransparency></iframe>
   </div>
   <div *ngIf="hasCommissioner">
     <app-meeting-overview></app-meeting-overview>
   </div>
   <div *ngIf="hasApplicationSpecialist">
-    <app-audit-subtasks></app-audit-subtasks>
+    <app-subtask-table subtaskLabel="Audit" [subtaskType]="SUBTASK_TYPE.AUDIT"></app-subtask-table>
   </div>
   <div *ngIf="hasAgrologist">
-    <app-agro-subtasks></app-agro-subtasks>
+    <app-subtask-table
+      subtaskLabel="Agrologist"
+      [assignableRoles]="[ROLES.AGROLOGIST]"
+      [subtaskType]="SUBTASK_TYPE.AGROLOGIST"
+    ></app-subtask-table>
+  </div>
+  <div *ngIf="showPeerReview">
+    <app-subtask-table
+      subtaskLabel="Peer Review"
+      [assignableRoles]="[ROLES.LUP, ROLES.SOIL_OFFICER]"
+      [subtaskType]="SUBTASK_TYPE.PEER_REVIEW"
+    ></app-subtask-table>
   </div>
 </div>
