--- a/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
+++ b/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.html
@@ -31,8 +31,9 @@
   </div>
   <div
     *ngIf="
-      application.status.code === APPLICATION_STATUS.IN_REVIEW ||
-      application.status.code === APPLICATION_STATUS.SUBMITTED_TO_LG
+      !applicationReview &&
+      (application.status.code === APPLICATION_STATUS.IN_REVIEW ||
+        application.status.code === APPLICATION_STATUS.SUBMITTED_TO_LG)
     "
     class="warning"
   >
@@ -57,42 +58,49 @@
           <div class="subheading2">Local Government File Number</div>
           <div>
             {{ applicationReview.localGovernmentFileNumber }}
+            <app-no-data *ngIf="!applicationReview.localGovernmentFileNumber"></app-no-data>
           </div>
         </div>
         <div>
           <div class="subheading2">First Name</div>
           <div>
             {{ applicationReview.firstName }}
+            <app-no-data *ngIf="!applicationReview.firstName"></app-no-data>
           </div>
         </div>
         <div>
           <div class="subheading2">Last Name</div>
           <div>
             {{ applicationReview.lastName }}
+            <app-no-data *ngIf="!applicationReview.lastName"></app-no-data>
           </div>
         </div>
         <div>
           <div class="subheading2">Position</div>
           <div>
             {{ applicationReview.position }}
+            <app-no-data *ngIf="!applicationReview.position"></app-no-data>
           </div>
         </div>
         <div>
           <div class="subheading2">Department</div>
           <div>
             {{ applicationReview.department }}
+            <app-no-data *ngIf="!applicationReview.department"></app-no-data>
           </div>
         </div>
         <div>
           <div class="subheading2">Phone Number</div>
           <div>
             {{ applicationReview.phoneNumber }}
+            <app-no-data *ngIf="!applicationReview.phoneNumber"></app-no-data>
           </div>
         </div>
         <div>
           <div class="subheading2">Email</div>
           <div>
             {{ applicationReview.email }}
+            <app-no-data *ngIf="!applicationReview.email"></app-no-data>
           </div>
         </div>
       </div>
@@ -106,18 +114,21 @@
             <span *ngIf="applicationReview.isOCPDesignation !== null">{{
               applicationReview.isOCPDesignation ? 'Yes' : 'No'
             }}</span>
+            <app-no-data *ngIf="applicationReview.isOCPDesignation === null"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isOCPDesignation">
           <div class="subheading2">OCP Bylaw Name</div>
           <div>
             {{ applicationReview.OCPBylawName }}
+            <app-no-data *ngIf="!applicationReview.OCPBylawName"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isOCPDesignation">
           <div class="subheading2">OCP Designation</div>
           <div>
             {{ applicationReview.OCPDesignation }}
+            <app-no-data *ngIf="!applicationReview.OCPDesignation"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isOCPDesignation">
@@ -126,6 +137,7 @@
             <span *ngIf="applicationReview.OCPConsistent !== null">{{
               applicationReview.OCPConsistent ? 'Yes' : 'No'
             }}</span>
+            <app-no-data *ngIf="applicationReview.OCPConsistent === null"></app-no-data>
           </div>
         </div>
       </div>
@@ -139,24 +151,28 @@
             <span *ngIf="applicationReview.isSubjectToZoning !== null">{{
               applicationReview.isSubjectToZoning ? 'Yes' : 'No'
             }}</span>
+            <app-no-data *ngIf="applicationReview.isSubjectToZoning === null"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isSubjectToZoning">
           <div class="subheading2">Zoning Bylaw Name</div>
           <div>
             {{ applicationReview.zoningBylawName }}
+            <app-no-data *ngIf="!applicationReview.zoningBylawName"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isSubjectToZoning">
           <div class="subheading2">Zoning Designation</div>
           <div>
             {{ applicationReview.zoningDesignation }}
+            <app-no-data *ngIf="!applicationReview.zoningDesignation"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isSubjectToZoning">
           <div class="subheading2">Minimum Lot Size (hectares)</div>
           <div>
             {{ applicationReview.zoningMinimumLotSize }}
+            <app-no-data *ngIf="!applicationReview.zoningMinimumLotSize"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isSubjectToZoning">
@@ -165,6 +181,7 @@
             <span *ngIf="applicationReview.isZoningConsistent !== null">{{
               applicationReview.isZoningConsistent ? 'Yes' : 'No'
             }}</span>
+            <app-no-data *ngIf="applicationReview.isZoningConsistent === null"></app-no-data>
           </div>
         </div>
       </div>
@@ -172,6 +189,12 @@
     <section>
       <h4>Resolution</h4>
       <div class="review-table">
+        <div
+          class="full-width"
+          *ngIf="applicationReview.isOCPDesignation === null || applicationReview.isSubjectToZoning === null"
+        >
+          Please complete both Step 2 Plans & Bylaws: OCP and Step 3 Plans & Bylaws: Zoning to continue with this step.
+        </div>
         <div
           class="full-width"
           *ngIf="
@@ -196,6 +219,7 @@
             <span *ngIf="applicationReview.isAuthorized !== null">{{
               applicationReview.isAuthorized ? 'Authorized' : 'Refuse to Authorize'
             }}</span>
+            <app-no-data *ngIf="applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
         <div *ngIf="applicationReview.isFirstNationGovernment" class="full-width">
@@ -204,13 +228,20 @@
             <span *ngIf="applicationReview.isAuthorized !== null">{{
               applicationReview.isAuthorized ? 'Authorized' : 'Refuse to Authorize'
             }}</span>
+            <app-no-data *ngIf="!applicationReview.isAuthorized"></app-no-data>
           </div>
         </div>
       </div>
     </section>
     <section>
       <h4>Attachments</h4>
-      <div class="review-table">
+      <div *ngIf="!hasCompletedStepsBeforeDocuments" class="review-table">
+        <div class="full-width">
+          Please complete Step 2 Plans & Bylaws: OCP, Step 3 Plans & Bylaws: Zoning and Step 4 Resolution to continue
+          with this step.
+        </div>
+      </div>
+      <div *ngIf="hasCompletedStepsBeforeDocuments" class="review-table">
         <div *ngIf="applicationReview.isOCPDesignation || applicationReview.isSubjectToZoning">
           <div class="subheading2">Resolution Document</div>
           <div>
@@ -235,7 +266,7 @@
             <div class="document" *ngFor="let document of governmentOtherAttachments">
               <a class="link" (click)="openFile(document.uuid)">{{ document.fileName }}</a>
             </div>
-            <div *ngIf="governmentOtherAttachments.length === 0"><em>None provided</em></div>
+            <app-no-data *ngIf="governmentOtherAttachments.length === 0"></app-no-data>
           </div>
         </div>
       </div>
