--- a/alcs-frontend/src/app/features/notice-of-intent/info-requests/info-request-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/info-requests/info-request-dialog/info-request-dialog.component.html
@@ -69,9 +69,7 @@
         </mat-radio-group>
       </mat-form-field>
     </div>
-    <div class="form-warning">
-      The application's active day count will be paused until a fulfillment date is provided.
-    </div>
+    <div class="form-warning">The NOI's active day count will be reset when a fulfillment date is provided.</div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div class="button-container">
