--- a/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.html
@@ -21,7 +21,13 @@
         >
           View Detail
         </button>
-        <button [mat-dialog-close]="isDirty" mat-menu-item>Add Info Request</button>
+        <button
+          [mat-dialog-close]="isDirty"
+          [routerLink]="['notice-of-intent', noticeOfIntent.fileNumber, 'info-request']"
+          mat-menu-item
+        >
+          Add Info Request
+        </button>
         <button [mat-dialog-close]="isDirty" mat-menu-item>Add Site Visit / Meeting</button>
       </mat-menu>
     </div>
