fix ceo criterion on modification

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -104,7 +104,7 @@
         *ngIf="form.get('decisionMaker')!.value === 'CEOP'"
         appearance="outline"
         class="full-width"
-        [items]="ceoCriterion"
+        [items]="ceoCriterionItems"
         formControlName="ceoCriterion"
         appendTo="body"
         bindLabel="label"
