Fix ALCS Primary Contact not showing Ministry/Department

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -36,8 +36,8 @@
       {{ submittedApplication.primaryContact.lastName }}
     </div>
     <div class="subheading2 grid-1">
-      <span *ngIf='submittedApplication.primaryContact.type !== "CRWN"'>Organization</span>
-      <span *ngIf='submittedApplication.primaryContact.type === "CRWN"'>Ministry/Department Responsible</span>
+      <span *ngIf='submittedApplication.primaryContact.type.code !== "CRWN"'>Organization</span>
+      <span *ngIf='submittedApplication.primaryContact.type.code === "CRWN"'>Ministry/Department Responsible</span>
     </div>
     <div class="grid-double">
       {{ submittedApplication.primaryContact.organizationName }}
